NASMX Notes:
~~~~~~~~~~~~

The community forum can be found at:
  http://forum.nasm.us

Downloads and snapshots are available from:
  http://sourceforge.net/projects/nasmx/

Change Log
~~~~~~~~~~

NASMX v1.4: 12 Mar 2014

- Fixed INVOKE stack alignment bug
- Fixed INVOKE bug when eax/rax used as argument
- Optimized USES macro
- Corrected x64 register parameter spill behavior
- Added pragmas PROC_FASTCALL_STACK_PRELOAD and INVOKE_FASTCALL_STACK_PRELOAD
- Deprecated previous FASTCALL_STACK_PRELOAD pragma
- Nasm v2.11 or greater now required due to preprocessor fixes
- Updated Windows distribution "bin" directory with Nasm v2.11.02
- Updated html docs and Windows Compiled Help Modules
_________________________________________________________

NASMX v1.3: 14 Feb 2014

- Refresh Win32 distribution "bin" directory with
  latest release version of Nasm:
  NASM v2.11, NDISASM v2.11
- New docs directory added.
- Added NASM-X html document files
- Windows Compiled Help Modules:
  * Created NASM-X.CHM
  * Updated NASMDOC.CHM to Nasm 2.11
- Corrected structure alignment issue
- Added defines to win32 include files
  based on value of UNICODE
- Added FASTCALL_STACK_PRELOAD pragma
  When disabled the fastcall register arguments will no longer
  automatically spill into the register shadow space on the stack.
  It is enabled by default only on Win64 to remain backward compatible.
- Fixed issue when user specifies structure member name with _type appended.
_________________________________________________________

NASMX v1.2: 12 Jan 2013

- Added BSD x86 & x64 syscall support
- Added BSD Demos 1-5
- Refresh Win32 distribution "bin" directory with
  latest release version of Nasm:
  NASM v2.10.07, NDISASM v2.10.07
- Updated NASMDOC.CHM to Nasm 2.10.07
- Added Win32 Demo 15 - OpenGL Torus example
- Added Win32 Demo 16 - GTK example program
- Added Win32 Demo 17 - GDI floor program
- Added Win64 Demo 6 - GDI floor program
- Added Linux64 Demo 5 - Xlib example